# phone-mic

./: .gitignore  Cargo.toml  README.md  package.json
src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/systemd/: phone-mic.service
